k8s/app/deploy--marketplace-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-api
  namespace: eshop-app
  labels:
    app: marketplace-api
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketplace-api
  template:
    metadata:
      labels:
        app: marketplace-api
        env: dev
    spec:
      containers:
        - name: marketplace-api
          image: deroffal/eshop-marketplace:0.9
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 512Mi
          startupProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
            timeoutSeconds: 60
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            periodSeconds: 5
            failureThreshold: 3
