k8s/app/deploy--product-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api
  namespace: eshop-app
  labels:
    app: catalog-api
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-api
  template:
    metadata:
      labels:
        app: catalog-api
        env: dev
    spec:
      containers:
        - name: catalog-api
          image: deroffal/eshop-catalog:0.11
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 512Mi
          startupProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
            timeoutSeconds: 60
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            periodSeconds: 5
            failureThreshold: 3
