k8s/app/deploy--stock-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-api
  namespace: eshop-app
  labels:
    app: stock-api
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-api
  template:
    metadata:
      labels:
        app: stock-api
        env: dev
    spec:
      containers:
        - name: stock-api
          image: deroffal/eshop-stock:0.10
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 512Mi
          startupProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
            timeoutSeconds: 60
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            periodSeconds: 5
            failureThreshold: 3
