k8s/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: marketplace
  namespace: eshop-app
  labels:
    app.kubernetes.io/name: marketplace
spec:
  selector:
    app: marketplace-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: price
  namespace: eshop-app
  labels:
    app.kubernetes.io/name: price
spec:
  selector:
    app: price-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: eshop-app
  labels:
    app.kubernetes.io/name: catalog
spec:
  selector:
    app: catalog-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
